# rust-practice-code

./: .gitignore  Cargo.toml
basic-io/: Cargo.toml
basic-io/src/: main.rs
candidate-ages/: Cargo.toml
candidate-ages/src/: main.rs
drink-age-matching/: Cargo.toml
drink-age-matching/src/: main.rs
drinks/: Cargo.toml
drinks/src/: main.rs
error-handling/src/: main.rs
file-io/: Cargo.toml
file-io/src/: main.rs
loops/src/: main.rs
multi-arm-function/: Cargo.toml
multi-arm-function/src/: main.rs
my_rust_project/: Cargo.toml
my_rust_project/src/: main.rs
password-cracker-sha256/: Cargo.toml
password-cracker-sha256/src/: main.rs
quiz-game/: Cargo.toml
structures-practice/: Cargo.toml
structures-practice/src/: main.rs
taking-damage/: Cargo.toml
taking-damage/src/: main.rs
template-calcuator-advanced/: Cargo.toml
template-calcuator-advanced/src/: main.rs
url-shortener/: Cargo.toml
url-shortener/src/: main.rs  mapping.txt
vectors-practice/: Cargo.toml
vectors-practice/src/: main.rs
